# partitioned_elias_fano

./: .gitignore  CMakeLists.txt  README.md  block_codecs.cpp  block_codecs.hpp  block_posting_list.hpp  compress_integer_qmx_improved.cpp  compress_integer_qmx_improved.h  index_types.hpp  query_log_runner.cpp
Runner/: CMakeLists.txt  QueryLogRunner.cpp  QueryLogRunner.h  QueryLogRunnerBase.cpp  QueryLogRunnerBase.h  Stopwatch.cpp  ThreadSynchronizer.cpp  ThreadSynchronizer.h
test/: CMakeLists.txt  test_block_codecs.cpp  test_block_freq_index.cpp  test_block_posting_list.cpp
